<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="604dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/display_pic" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/loginUserName"
        android:inputType="textPersonName"
        android:textColorHint="#02031B"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:textColorHint="#010510"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="92dp"
        android:background="@android:color/holo_orange_light"
        android:text="Login"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="33dp"
        android:text="Sign up"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>