...
        android:layout_width="746dp"
        android:layout_height="669dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        android:fadingEdge="horizontal"
        android:src="@drawable/display_pic"
        app:layout_constraintBottom_toTopOf="@+id/login1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

...
