...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="158dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:onClick="buttonUpdateRating"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showRating" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="244dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:numStars="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
