...
            </ListView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/writeReviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="buttonWriteCourseReviewOnClick"
        android:text="WRITE A REVIEW" />

    <Button
        android:id="@+id/viewTutors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
...
